--- a/medlegal/nbproject/project.properties
+++ b/medlegal/nbproject/project.properties
@@ -40,6 +40,7 @@ file.reference.itextpdf-5.3.4.jar=librerias/itextpdf-5.3.4.jar
 file.reference.poi-3.9-20121203.jar=librerias/poi-3.9-20121203.jar
 file.reference.postgresql-9.3-1101.jdbc41.jar=librerias/postgresql-9.3-1101.jdbc41.jar
 file.reference.primefaces-3.4-sources.jar=librerias/primefaces-3.4-sources.jar
+file.reference.primefaces-5.0.jar=librerias/primefaces-5.0.jar
 includes=**
 j2ee.compile.on.save=true
 j2ee.copy.static.files.on.save=true
@@ -57,8 +58,8 @@ javac.classpath=\
     ${file.reference.itextpdf-5.3.4.jar}:\
     ${file.reference.poi-3.9-20121203.jar}:\
     ${file.reference.commons-fileupload-1.3.jar}:\
-    ${libs.primefaces.classpath}:\
     ${libs.hibernate-support.classpath}:\
+    ${file.reference.primefaces-5.0.jar}:\
     ${file.reference.postgresql-9.3-1101.jdbc41.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
